@@ -25,3 +25,4 @@
 * revised internationalization
 * diagram of visibility of heavenly bodies
 * legend in year diagram
+* ability to use a picture pattern
